--- a/public/app/views/query.html
+++ b/public/app/views/query.html
@@ -66,7 +66,7 @@
 	        			 <div class="col-sm-4 col-sm-push-2">
 	        			 <div class="input-group">
 	        			 	<div class="input-group-addon"><label for="entrada">Entrada</label></div>
-	        			 	<input type="text" id="entrada" class="form-control"  ng-model="Query.processo.entrada">
+	        			 	<input type="date" id="entrada" class="form-control"  ng-model="Query.processo.entrada">
 	        			 </div>
 	        		</div>
 	        	</div>
@@ -74,29 +74,33 @@
         	</div>
         	<div class="form-group">
         		<div class="row">
-        			<div class="col-sm-9 col-sm-push-1">
+           			<div class="col-sm-9 col-sm-push-1">
         				<div class="panel panel-default">
         					<div class="panel-heading">
         						SAEB
         					</div>
         					<div class="panel-body">
-        						<div class="col-sm-4">
-	        						<div class="input-group">
-				        			 	<div class="input-group-addon"><label for="saeb-saida">Saída</label></div>
-				        			 	<input type="text" id="saeb-saida" class="form-control"  ng-model="Query.processo.saeb.saida">
-				        			</div>
-        						</div>
-        						<div class="col-sm-4">
-				        			<div class="input-group">
-				        			 	<div class="input-group-addon"><label for="saeb-oficio">Ofício</label></div>
-				        			 	<input type="text" id="saeb-oficio" class="form-control"  ng-model="Query.processo.saeb.oficio">
-				        			</div>
-        						</div>
-								<div class="col-sm-4">
-				        			<div class="input-group">
-				        			 	<div class="input-group-addon"><label for="saeb-oficio">Retorno</label></div>
-				        			 	<input type="text" id="saeb-retorno" class="form-control"  ng-model="Query.processo.saeb.retorno">
-				        			</div>
+	        					<div class="row">
+	        						<div class="col-sm-4 ">
+					        			<div class="input-group">
+					        			 	<div class="input-group-addon"><label for="saeb-oficio">Ofício</label></div>
+					        			 	<input type="text" id="saeb-oficio" class="form-control"  ng-model="Query.processo.saeb.oficio">
+					        			</div>
+	        						</div>
+	        					</div>
+	        					<div class="row">
+	        						<div class="col-sm-6 ">
+		        						<div class="input-group">
+					        			 	<div class="input-group-addon"><label for="saeb-saida">Saída</label></div>
+					        			 	<input type="date" id="saeb-saida" class="form-control"  ng-model="Query.processo.saeb.saida">
+					        			</div>
+	        						</div>
+									<div class="col-sm-6">
+					        			<div class="input-group">
+					        			 	<div class="input-group-addon"><label for="saeb-oficio">Retorno</label></div>
+					        			 	<input type="date" id="saeb-retorno" class="form-control"  ng-model="Query.processo.saeb.retorno">
+					        			</div>
+	        						</div>
         						</div>
         					</div>
         				</div>
@@ -111,24 +115,25 @@
         						UG
         					</div>
         					<div class="panel-body">
-        						<div class="col-sm-4">
-	        						<div class="input-group">
-				        			 	<div class="input-group-addon"><label for="ug-retorno">Retorno</label></div>
-				        			 	<input type="text" id="ug-retorno" class="form-control"  ng-model="Query.processo.ug.retorno">
-				        			</div>
-        						</div>
-        						<div class="col-sm-4 col-sm-push-3">
-				        			<div class="input-group">
-				        			 	<div class="input-group-addon"><label for="ug-oficio">Ofício</label></div>
-				        			 	<input type="text" id="ug-oficio" class="form-control"  ng-model="Query.processo.ug.oficio">
-				        			</div>
+        						<div class="row">
+	        						<div class="col-sm-4">
+					        			<div class="input-group">
+					        			 	<div class="input-group-addon"><label for="ug-oficio">Ofício</label></div>
+					        			 	<input type="text" id="ug-oficio" class="form-control"  ng-model="Query.processo.ug.oficio">
+					        			</div>
+	        						</div>
+	        						<div class="col-sm-6 col-sm-push-2">
+		        						<div class="input-group">
+					        			 	<div class="input-group-addon"><label for="ug-retorno">Retorno</label></div>
+					        			 	<input type="date" id="ug-retorno" class="form-control"  ng-model="Query.processo.ug.retorno">
+					        			</div>
+	        						</div>
         						</div>
 	        				</div>
         				</div>
         			</div>
         		</div>
         	</div>
-
         	
         	<div class="form-group">
         		<div class="row" ng-repeat="serv in Query.processo.servidor.persons">
@@ -163,11 +168,8 @@
         					</div>
         				</div>
         			</div>
-        			
         		</div>
         	</div>
-
-
         	{{Query.processo}}
         </form>
 		
